--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   firebase_auth: ^6.0.2
   google_sign_in: ^6.2.1
   cloud_firestore: ^6.0.1
+  shared_preferences:
 
 dev_dependencies:
   build_runner:
