--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,11 @@ dependencies:
   google_sign_in: ^6.2.1
   cloud_firestore: ^6.0.1
   shared_preferences:
+  pdf:
+  printing:
+  path_provider: ^2.1.4
+  file_picker:
+  open_filex:
 
 dev_dependencies:
   build_runner:
@@ -38,5 +43,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   generate: true
+  assets:
+    - lib/assets/fonts/times_new_roman.ttf
 flutter_intl:
   enabled: true
