--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   path_provider: ^2.1.4
   file_picker:
   open_filex:
+  syncfusion_flutter_charts: ^31.1.19
 
 dev_dependencies:
   build_runner:
